--- a/src/main/webapp/skins/lyrebird/edit.vm
+++ b/src/main/webapp/skins/lyrebird/edit.vm
@@ -92,16 +92,37 @@
       </div>
       <div>
       <div class="metadata">
+        #if($doc.fullName != 'Main.WebHome')
         <div class="pull-right">
-        <label for="parent">Parent</label><input type="text" id="parent" name="parent" value="$!doc.parent" class="span4"/>
+        <label for="parent">Parent</label>
+        #set($spaceDocuments = $xwiki.searchDocuments("where doc.space=? and doc.name!=? and doc.name!='WebHome'", [$doc.space, $doc.name]))
+        #if("$!doc.parent" != '')
+          #set($currentParentDocument = $xwiki.getDocument($doc.parent))
+        #end
+        #if($currentParentDocument && $currentParentDocument.space != $doc.space)
+        <input type="text" id="parent" name="parent" value="$!doc.parent" class="span4" value="${currentParentDocument.fullName}"/>
+        #else
+        <select id="parent" name="parent" class="span4">
+          <option value="${doc.space}.WebHome">$xwiki.getDocument("${doc.space}.WebHome").displayTitle</option>
+          #foreach($name in $spaceDocuments)
+          <option value="${name}"
+           #if($currentParentDocument && $currentParentDocument.fullName == $name) selected #end
+          >
+            $xwiki.getDocument($name).displayTitle
+          </option>
+          #end
+        </select>
+        #end
         </div>
+        #end
         <label for="title">Title</label><input type="text" id="title" name="title" value="$!doc.title" class="span6" />
+        <p class="help-block">permalink is <tt>$doc.getURL('view')</tt> - <a href="$doc.getURL('view', 'xpage=rename')">change</a></p>
       </div>
       <div class="clearfix"></div>
-##      #template("tagedit.vm")
     #end
     #template("edit${editor}.vm")
     #if($editor == 'wiki' || $editor == 'wysiwyg')
+##      #template("tagedit.vm")
       </form>
     #end
     </div>
