--- a/src/main/webapp/skins/lyrebird/startpage.vm
+++ b/src/main/webapp/skins/lyrebird/startpage.vm
@@ -1,4 +1,5 @@
 #template("xwikivars.vm")
+#set($LYREBIRD_MODE = 'production') ## Change this to development if you need to modify LESS files
 <!DOCTYPE html>
 <html lang="$xcontext.language">
   <head>
@@ -66,9 +67,13 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    #if($LYREBIRD_MODE == 'development')
     <!-- Le styles -->
     <link rel="stylesheet/less" type="text/css" href="$xwiki.getSkinFile('lib/bootstrap/less/bootstrap.less', true)">
     <script src="$xwiki.getSkinFile('lib/less/less-1.3.0.min.js')" type="text/javascript"></script>
+    #else
+    <link href="$xwiki.getSkinFile('lib/bootstrap/css/bootstrap-xwiki.min.css', true)" rel="stylesheet">
+    #end
 
     <link href="$xwiki.getSkinFile('xwiki.css', true)" rel="stylesheet">
     <link href="$xwiki.getSkinFile("uicomponents/suggest/suggest.css", true)" rel="stylesheet" type="text/css" />
@@ -90,6 +95,7 @@ $xwiki.jsfx.use('uicomponents/widgets/list/xlist.js')
 $xwiki.jsfx.use('uicomponents/suggest/suggest.js')
 
 $xwiki.jsfx.use('lib/bootstrap/js/bootstrap-collapse.js')
+$xwiki.jsfx.use('lib/bootstrap/js/bootstrap-dropdown.js')
 
     <script type="text/javascript" src="$xwiki.getSkinFile("lib/jquery/jquery-1.7.2.min.js")"></script>
     <script type="text/javascript">
