--- a/src/main/webapp/skins/lyrebird/startpage.vm
+++ b/src/main/webapp/skins/lyrebird/startpage.vm
@@ -207,6 +207,8 @@ Event.observe(document, "dom:loaded", prepareCancelEdit);
     <link rel="apple-touch-icon" href="$xwiki.getSkinFile('apple-touch-icon.png')">
     <link rel="apple-touch-icon" sizes="72x72" href="$xwiki.getSkinFile('apple-touch-icon-72x72.png')">
     <link rel="apple-touch-icon" sizes="114x114" href="$xwiki.getSkinFile('apple-touch-icon-114x114.png')">
+
+    #template("headExtra.vm")
   </head>
 
   <body id="body">
