--- a/src/main/webapp/skins/lyrebird/xwiki.css
+++ b/src/main/webapp/skins/lyrebird/xwiki.css
@@ -129,24 +129,24 @@ ul.xlist li.space, ul.xlist li.page, ul.xlist li.comment, ul.xlist li.attachment
 }
 
 ul.xlist li.space {
-  background-image: url("$xwiki.getSkinFile('icons/silk/folder.gif')");
+  background-image: url($xwiki.getSkinFile('icons/silk/folder.gif'));
 }
 
 ul.xlist li.page {
-  background-image: url("$xwiki.getSkinFile('icons/silk/page_white_text.gif')");
+  background-image: url($xwiki.getSkinFile('icons/silk/page_white_text.gif'));
 }
 
 ul.xlist li.comment {
-  background-image: url("$xwiki.getSkinFile('icons/silk/comment.gif')");
+  background-image: url($xwiki.getSkinFile('icons/silk/comment.gif'));
 }
 
 ul.xlist li.attachment {
-  background-image: url("$xwiki.getSkinFile('icons/silk/attach.gif')");
+  background-image: url($xwiki.getSkinFile('icons/silk/attach.gif'));
   padding-bottom: 0;
 }
 
 ul.xlist li.create a {
-  background: url("$xwiki.getSkinFile('icons/silk/bullet_add.gif')") 7px 3px no-repeat;
+  background: url($xwiki.getSkinFile('icons/silk/bullet_add.gif')) 7px 3px no-repeat;
   color: $theme.textSecondaryColor;
   text-decoration: none;
   padding-left: 1.5em;
