Hide edit meta tools in inline mode

--- a/src/main/webapp/skins/lyrebird/xwiki.css
+++ b/src/main/webapp/skins/lyrebird/xwiki.css
@@ -409,6 +409,10 @@ table.xRichTextEditorTabPanel {
   display:none !important;
 }
 
+.edit-meta-tools {
+  display:none !important;
+}
+
 #*
 #xwikieditcontent .fullScreenEditButton {
   display:none;
