--- a/skin/src/main/resources/lyrebird/lib/bootstrap/less/xwiki.less
+++ b/skin/src/main/resources/lyrebird/lib/bootstrap/less/xwiki.less
@@ -24,8 +24,9 @@ form.xform {
   .btn-primary;
 }
 
-/* Fix some strange behavior in the template provider admin section */
-.xform .buttons:before, .xform .buttons:after {
+/* Fix buttons container layout in the admin sections */
+.xform .buttons:before, .xform .buttons:after,
+#admin-page-content .bottombuttons:after {
   display: inline-block !important;
 }
 
@@ -72,29 +73,53 @@ ul.xwikitabbar {
 
 /* Livetable */
 
-.pagesizeselect {
-}
-
-.pagination, .controlPagination{
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: 3px 3px 3px 3px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    float: left;
-    margin: 0;
-}
-
-.nextPagination span {
-
-  &:after {
-    content: "→";
+  .pagesizeselect {
   }
-}
 
-.prevPagination span {
-  &:before {
-    content: "←";
+  .xwiki-livetable-limits {
+    float:none !important;
   }
-}
+
+  select.pagesizeselect {
+    width: 60px;
+    padding-left: 5px;
+  }
+
+  .xwiki-livetable-pagination-text {
+    display: none !important;
+  }
+
+  .pagination, .controlPagination{
+      border: 1px solid rgba(0, 0, 0, 0.15);
+      border-radius: 3px 3px 3px 3px;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+      float: left;
+      margin: 0;
+      line-height: 34px;
+      height: 34px !important;
+  }
+
+  body.lyrebird {
+
+    .xwiki-livetable td.xwiki-livetable-display-container {
+      padding: 20px 0 0 0;
+    }
+
+    .controlPagination a.prevPagination,
+    .controlPagination a.nextPagination {
+      background-image:none;
+      width:auto;
+      padding-top: 5px;
+      width: 58px !important;
+
+      &:after, &:before {
+        content: "→";
+        font-size: 2rem;
+        left: -7px;
+        position: relative;
+      }
+    }
+  }
 
 /* Panels */
 
