Fix XWiki Panel margins + don't display list item bullets

--- a/skin/src/main/resources/lyrebird/xwiki.css
+++ b/skin/src/main/resources/lyrebird/xwiki.css
@@ -362,12 +362,21 @@ ul.xlist li.xitem div.xitemcontainer ul.xlist {
 
 /* Fix panels */
 
+.xwikipanelcontents {
+    padding:10px 15px;
+}
+
 .xwikipanelcontents p span.panelitem {
   display:block;
 }
 
 .xwikipanelcontents p span.pitemseparator {
   display:none;
+}
+
+.panel ul {
+    list-style-type:none;
+    margin:0;
 }
 
 /* Fix content menu. */
